--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Flask
 matplotlib
 numpy
+-f https://download.pytorch.org/whl/torch_stable.html
+torch==1.6.0+cpu
+-f https://download.pytorch.org/whl/torch_stable.html
+torchvision==0.7.0+cpu
